(feat): Add connection to superbase and a save or commit to db function that stores the user email before that add a pydantic check

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SUPERBASE_DB_PASS = "kotlin101@3rdworld"
+SUPABASE_URL="https://vblydvoaercptwoudryp.supabase.co"
+SUPABASE_KEY="sb_publishable_6MRue7UftVnBfafQAlzBVA_i1zmYKJM"
+SUPERBASE_TABLE_NAME="waitlist"
