--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SUPABASE_URL="https://vblydvoaercptwoudryp.supabase.co"
 SUPABASE_KEY="sb_publishable_6MRue7UftVnBfafQAlzBVA_i1zmYKJM"
-SUPERBASE_TABLE_NAME="waitlist"
+SUPABASE_TABLE_NAME="waitlist"
